objects/Partner_Notice_of_Non_Renewal__c.object
<CustomObject>
    <description>Custom Object to store the information about Partner Notice for Non-Renewal</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Notice of Non-Renewal</relationshipLabel>
        <relationshipName>Partner_Notice_of_Non_Renewal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Notice of Non-Renewal</relationshipLabel>
        <relationshipName>Partner_Notice_of_Non_Renewal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Notice of Non-Renewal</label>
    <nameField>
        <displayFormat>ROW#{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Notice of Non-Renewal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>